Olympus/src/Apttus Quote/Proposal Approvals Management/objects/Apttus_Approval__Approval_Request_History__c.object
<CustomObject>
    <fields>
        <fullName>ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <label>Related Quote/ProposalQuote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Approval Request History</relationshipLabel>
        <relationshipName>ApprovalRequestHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProposalLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal line item</description>
        <label>Related Quote/ProposalProposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Approval Request History</relationshipLabel>
        <relationshipName>ApprovalRequestHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProposalOwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal owner</description>
        <label>Related Quote/Proposal OwnerUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovalRequestHistory</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>